--- a/src/style/comp/index.less
+++ b/src/style/comp/index.less
@@ -1,5 +1,11 @@
-.container{
-    width:600px;
-    margin:30px auto;
-    transform: translateY(20px);
+.box{
+    background: #eee;
+    color:#333333;
+    padding:10px;
+    font-size:30px;
+    cursor: pointer;
+
+    &:hover{
+        color: aqua;
+    }
 }
