--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,8 +1,8 @@
-@base: #aaa;
-.row{
-    color: @base;
+@width: 600px;
 
-    &:hover{
-        color:lighten(@base,50%)
-    }
+.container{
+    margin:30px auto;
+    width: @width;
 }
+
+@import "./comp/index.less";
